--- a/views/team.jade
+++ b/views/team.jade
@@ -8,6 +8,9 @@ block content
 	-if(user != null && user.team == team.team)
 		a(href="/gm/keepers/" + team.team) Select Keepers
 
+	-if(user != null && user.team != team.team)
+		a(href="/gm/trade/team/" + team.team) Trade
+
 	mixin player(player, position, properties)
 		-if(player != undefined)
 			tr(player_id=player.player_id)
