--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
 		block scripts
 			script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 			script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
+			script(type='text/javascript', src='http://code.jquery.com/ui/1.10.3/jquery-ui.js')
 
 	body
 		div(style="float:top")
