--- a/views/team.jade
+++ b/views/team.jade
@@ -55,7 +55,7 @@ block content
 
 	div(style="float:left")
 		h2 Players
-		-if(user != null && user.team != team.team)
+		-if(isTradingOn && user != null && user.team != team.team)
 			a(href="/gm/trade/team/" + team.team) Trade
 		table(id='players_' + team.team)
 			thead
@@ -96,25 +96,26 @@ block content
 					-for(var i = 0; i < players.minor_leaguers.length; i++)
 						mixin player(players.minor_leaguers[i], 'ML')
 
-		h2 Trades
-		-each trade in inTrades
-			a(href="/gm/trade/" + trade._id)= "From " + trade.from.team
-			-each player in trade.from.players
-				a= player
+		-if(isTradingOn)
+			h2 Trades
+			-each trade in inTrades
+				a(href="/gm/trade/" + trade._id)= "From " + trade.from.team
+				-each player in trade.from.players
+					a= player
 
-			-each player in trade.to.players
-				a= player
-			br
-		-each trade in outTrades
-			a(href="/gm/trade/" + trade._id)= "Proposed to " + trade.to.team
-			-for(var i = 0; i < trade.to.players.length; i++) {
-				a(href="/admin/player/" + trade.to.players[i])= trade.to.player_names[i]
-			- }
+				-each player in trade.to.players
+					a= player
+				br
+			-each trade in outTrades
+				a(href="/gm/trade/" + trade._id)= "Proposed to " + trade.to.team
+				-for(var i = 0; i < trade.to.players.length; i++) {
+					a(href="/admin/player/" + trade.to.players[i])= trade.to.player_names[i]
+				- }
 
-			-for(var i = 0; i < trade.from.players.length; i++) {
-				a(href="/admin/player/" + trade.from.players[i])= trade.from.player_names[i]
-			- }
-			br
+				-for(var i = 0; i < trade.from.players.length; i++) {
+					a(href="/admin/player/" + trade.from.players[i])= trade.from.player_names[i]
+				- }
+				br
 
 	div(style="float:right; margin-right:30px;")
 		div(id="player_info")
